Implements lightbox component.

--- a/photographer.html
+++ b/photographer.html
@@ -21,8 +21,8 @@
         <div class="infos__wrapper"></div>
       </section>
 
-      <section class="photographer__pictures">
-        <div class="pictures__header">
+      <section class="photographer__medias">
+        <div class="medias__header">
           <form class="app-form">
             <div class="form__row">
               <label for="sort">Trier par</label>
@@ -34,7 +34,7 @@
             </div>
           </form>
         </div>
-        <div class="pictures__body"></div>
+        <div class="medias__list"></div>
       </section>
 
       <div class="photographer__modal">
