--- a/photographer.html
+++ b/photographer.html
@@ -36,6 +36,13 @@
         </div>
         <div class="medias__list"></div>
       </section>
+
+      <div class="lightbox" data-component="lightbox">
+        <div class="lightbox__previous"></div>
+        <div class="lightbox__media"></div>
+        <div class="lightbox__next"></div>
+        <div class="lightbox__close"></div>
+      </div>
     </main>
     <script src="./scripts/main.js" type="module"></script>
   </body>
