Add accessibility to photographer page.

--- a/photographer.html
+++ b/photographer.html
@@ -37,11 +37,11 @@
         <div class="medias__list"></div>
       </section>
 
-      <div class="lightbox" data-component="lightbox">
-        <div class="lightbox__previous"></div>
-        <div class="lightbox__media"></div>
-        <div class="lightbox__next"></div>
-        <div class="lightbox__close"></div>
+      <div class="lightbox" data-component="lightbox" tabindex="0" aria-label="Vue rapprochée de l'image">
+        <div class="lightbox__previous" tabindex="0" aria-label="Image précédente"></div>
+        <div class="lightbox__media" tabindex="0"></div>
+        <div class="lightbox__next" tabindex="0" aria-label="Image suivante"></div>
+        <div class="lightbox__close" tabindex="0" aria-label="Fermer la fenêtre"></div>
       </div>
     </main>
     <script src="./scripts/main.js" type="module"></script>
