--- a/photographer.html
+++ b/photographer.html
@@ -27,14 +27,14 @@
             <div class="form__row">
               <label for="sort">Trier par</label>
               <select id="sort" name="sort">
-                <option name="popularity">Popularité</option>
-                <option name="date">Date</option>
-                <option name="title">Titre</option>
+                <option value="popularity">Popularité</option>
+                <option value="date">Date</option>
+                <option value="title">Titre</option>
               </select>
             </div>
           </form>
         </div>
-        <div class="medias__list"></div>
+        <div class="medias__list" data-component="list"></div>
       </section>
 
       <div class="lightbox" data-component="lightbox" tabindex="0" aria-label="Vue rapprochée de l'image">
