Fix header links.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="app-header">
       <div class="header__wrapper">
-        <a href="/">
+        <a href="./" aria-label="Page d'accueil Fisheye">
           <img src="./assets/img/logo.png" alt="Page d'accueil Fisheye" class="header__logo" />
         </a>
         <h1 class="header__title">Nos photographes</h1>
