Update favicon and js components.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr-FR">
   <head>
     <meta charset="utf-8" />
 
     <title>Fisheye</title>
 
-    <link rel="icon" type="image/png" href="./assets/img/favicon.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="./assets/img/favicon/site.webmanifest" />
+    <link rel="mask-icon" href="./assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css" />
   </head>
   <body>
@@ -18,7 +25,7 @@
       </div>
     </header>
     <main class="app-home">
-      <section class="home__photographers"></section>
+      <div class="home__photographers"></div>
     </main>
     <script src="./scripts/main.js" type="module"></script>
   </body>
