--- a/photographer.html
+++ b/photographer.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr-FR">
   <head>
     <meta charset="utf-8" />
 
     <title>Fisheye – Photographe</title>
 
-    <link rel="icon" type="image/png" href="./assets/img/favicon.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="./assets/img/favicon/site.webmanifest" />
+    <link rel="mask-icon" href="./assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css" />
   </head>
   <body>
@@ -21,7 +28,7 @@
         <div class="infos__wrapper"></div>
       </section>
 
-      <section class="photographer__medias">
+      <div class="photographer__medias">
         <div class="medias__header">
           <form class="app-form">
             <div class="form__row">
@@ -35,7 +42,7 @@
           </form>
         </div>
         <div class="medias__list" data-component="list"></div>
-      </section>
+      </div>
 
       <div class="lightbox" data-component="lightbox" tabindex="0" aria-label="Vue rapprochée de l'image">
         <div class="lightbox__previous" tabindex="0" aria-label="Image précédente"></div>
